# cli-llm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  config.sample.toml  install.sh  llm  llm-single  pyproject.toml
python/: README_INTERACTIVE.md  llm  models.py  prompts.py  requirements.txt  setup.py  system_prompts.json  test_interactive.py
python/cli_llm/: __init__.py  cli.py  interactive.py  prompts.py
rust/: README.md
rust/src/: config.rs
scripts/: INSTALL.md  install.sh
shared/: new-rule.yaml
shared/prompts/: system_prompts.json
src/: config.rs  llm.rs  main.rs  utils.rs
src-rs/src/: cli.rs  prompts.rs
src/cli_llm/: __init__.py  _version.py  cli.py  config.py  prompts.py  system_prompts.json
src/cli_llm/providers/: __init__.py  openai_provider.py  router.py  types.py
src/cli_llm/renderers/: __init__.py  output.py
src/cli_llm/services/: __init__.py  input_handler.py  session.py
src/cli_llm/toolcalls/: __init__.py  presets.py  service.py  system_prompt.py
src/cli_llm/utils/: __init__.py
tests/: test_agents_context.py  test_chat_service_provider_dispatch.py  test_cli_provider_commands.py  test_config_loader.py  test_installer_smoke.sh  test_plugin_framework.py  test_provider_router.py  test_renderers_output.py  test_services_session.py  test_toolcall_execution.py  test_toolcall_presets.py  test_version.py
