[package]
name = "cli-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
log = { version = "0.4.27", features = ["std"] }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
config = { version = "0.15", optional = true }

[features]
default = []
full = ["serde", "config"]